--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.5.0"
+    "mongodb": "^5.5.0",
+    "morgan": "^1.10.0",
+    "stripe": "^12.8.0"
   }
 }
